--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TK's Website 👋</title>
+    <title>Tim the Full Stack Developer 👋</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
