--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Node, Express, Vue, React, Mongo, PHP, Python, Django, Ruby"
+      content="Expert in Node.js, Express, React, Vue, Ruby on Rails, and databases like MongoDB, PostgreSQL, & MySQL"
     />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tim Full Stack Developer 👋 💻</title>
+    <title>Tim | Software Engineer 👋 💻</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
